<resources>
    <string name="app_name">مخطوطات المصطفى</string>
    <string name="title_item_detail">التفاصيل</string>
    <string name="list">قائمة المخطوطات</string>
    <string name="search_des">ابحث عن عنوان المخطوطة أو مؤلفها أو مصدرها</string>
    <string name="image_makhtot">صور المخطوطة</string>
    <string name="general_info">المعلومات العامة</string>
    <string name="makhtot_name">اسم المخطوطة</string>
    <string name="makhtot_name_test">المنهاج بدرة الابتهاج في بيان معرفة المعراج</string>
    <string name="title_activity_image">ImageActivity</string>
    <string name="close">إغلاق</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="getData">تم تحديث قائمة المخطوطات</string>
    <string name="errorGettingData">هناك مشكلة في استلام المعلومات</string>
    <string name="makhtot_author_name">المؤلف</string>
    <string name="makhtot_writer">الناسخ</string>
    <string name="makhtot_writing_date">تاريخ النسخ</string>
    <string name="makhtot_source">المصدر</string>
    <string name="makhtot_cat">الموضوع</string>
    <string name="makhtot_line_count">عدد الأسطر</string>
    <string name="makhtot_font_type">نوع الخط</string>
    <string name="makhtot_notes">الملاحظات</string>
    <string name="page_count">عدد الصفحات</string>
    <string name="makhtot_first_line">أوله</string>
    <string name="makhtot_end_line">آخره</string>
</resources>