<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginRight="@dimen/large_margin_for_table_details"
    android:layout_marginLeft="@dimen/large_margin_for_table_details"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/tajwal"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:layout_marginBottom="@dimen/mini_margin"
        android:text="@string/image_makhtot"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="16dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/image1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="@dimen/standard_margin"
                android:src="@color/main_cream"/>


                <ImageView
                    android:id="@+id/image2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="@dimen/standard_margin"
                    android:src="@color/main_cream"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/tajwal"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:layout_marginBottom="@dimen/mini_margin"
        android:text="@string/general_info"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="16dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/makhtot_author_name"
                android:fontFamily="@font/tajwal"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
               />


            <TextView
                android:id="@+id/author"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="@string/makhtot_name_test"
                android:fontFamily="@font/tajwal"
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/black"
            android:alpha="0.2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/makhtot_writer"
                    android:fontFamily="@font/tajwal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_margin"
                    />


                <TextView
                    android:id="@+id/writer"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:text="@string/makhtot_name_test"
                    android:fontFamily="@font/tajwal"
                    android:textColor="@color/black"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_margin"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black"
                android:alpha="0.2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/makhtot_writing_date"
                    android:fontFamily="@font/tajwal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_margin"
                    />


                <TextView
                    android:id="@+id/writing_date"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:text="@string/makhtot_name_test"
                    android:fontFamily="@font/tajwal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_margin="@dimen/standard_margin"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black"
                android:alpha="0.2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/makhtot_source"
                    android:fontFamily="@font/tajwal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_margin"
                    />


                <TextView
                    android:id="@+id/source_name"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:text="@string/makhtot_name_test"
                    android:fontFamily="@font/tajwal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_margin="@dimen/standard_margin"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black"
                android:alpha="0.2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/makhtot_cat"
                    android:fontFamily="@font/tajwal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_margin"
                    />


                <TextView
                    android:id="@+id/cat"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:text="@string/makhtot_name_test"
                    android:fontFamily="@font/tajwal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_margin="@dimen/standard_margin"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black"
                android:alpha="0.2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/makhtot_line_count"
                    android:fontFamily="@font/tajwal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_margin"
                    />


                <TextView
                    android:id="@+id/line_count"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:text="@string/makhtot_name_test"
                    android:fontFamily="@font/tajwal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_margin="@dimen/standard_margin"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black"
                android:alpha="0.2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/makhtot_font_type"
                    android:fontFamily="@font/tajwal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_margin"
                    />


                <TextView
                    android:id="@+id/font_type"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:text="@string/makhtot_name_test"
                    android:fontFamily="@font/tajwal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_margin="@dimen/standard_margin"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black"
                android:alpha="0.2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/makhtot_notes"
                    android:fontFamily="@font/tajwal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_margin"
                    />


                <TextView
                    android:id="@+id/notes"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:text="@string/makhtot_name_test"
                    android:fontFamily="@font/tajwal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_margin="@dimen/standard_margin"
                    />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>



</LinearLayout>